--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ MAX_RETRIES= # max retries for scraping
 RETRY_DELAY= # delay between retries
 MIN_DELAY= # minimum delay between requests
 MAX_DELAY= # maximum delay between requests
+
+# (Optional) Generating Virtuals
+OPENAI_API_KEY= # openai api key
